ghc-4335c07/testsuite/tests/typecheck/should_compile/T12987.hs
{-# LANGUAGE TypeInType #-}

module T12987 where

import GHC.Exts

class NUM (a :: TYPE rep) where add :: a -> a -> a
